# python-polylith-example-pants

./: .flake8  .gitignore  BUILD  README.md  generate-venv.sh  pants.toml  pyproject.toml
components/example/dictionaries/: core.py
projects/consumer_project/: BUILD  pyproject.toml
projects/message_fastapi_project/: BUILD  pyproject.toml
projects/my_aws_lambda_project/: BUILD
projects/my_fastapi_project/: BUILD  pyproject.toml
projects/my_gcp_function_project/: BUILD
