[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-polylith-example-with-pants"
version = "0.1.0"
description = "A Python Polylith example code repo"
readme = "README.md"

license = "MIT"
authors = [{ name = "David Vujic" }]

dependencies = [
  "fastapi~=0.106.0",
  "uvicorn~=0.25.0",
  "functions-framework~=3.5.0",
  "sqlalchemy~=2.0.23",
  "confluent-kafka~=2.3.0",
  "polylith-cli",
]

[tool.polylith.bricks]
"bases/example/greet_api" = "example/greet_api"
"components/example/greeting" = "example/greeting"
"components/example/log" = "example/log"
