[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-polylith-example-with-pants"
version = "0.1.0"
description = "A Python Polylith example code repo"
readme = "README.md"

license = "MIT"
authors = [{ name = "David Vujic" }]

dependencies = [
  "fastapi~=0.111.0",
  "uvicorn~=0.29.0",
  "polylith-cli",
  "black",
  "isort",
  "mypy",
  "pytest",
]

[tool.polylith.bricks]
"bases/example/greet_api" = "example/greet_api"
"components/example/greeting" = "example/greeting"
"components/example/log" = "example/log"
