[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "my_fastapi_project"
version = "0.0.1"
description = 'A Python Polylith example code repo'
authors = [{ name = "David Vujic" }]
dependencies = [
  "fastapi~=0.111.0",
  "uvicorn~=0.29.0",
]

requires-python = ">=3.10"

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.build]
top-namespace = "my_custom_ns"

[tool.polylith.bricks]
"../../bases/example/greet_api" = "example/greet_api"
"../../components/example/greeting" = "example/greeting"
"../../components/example/log" = "example/log"
